tests/NormalTests/paczka1/fuzzy1/98756945.err
Error in line 1: yG4aG6NG A708 63,3
Error in line 4: yG4aG6NG A526 85,3
Error in line 38: AVqZMg A526 85,8
